@@ -22,7 +22,7 @@ import com.facebook.buck.cxx.toolchain.CxxPlatform;
 import com.facebook.buck.cxx.toolchain.linker.Linker;
 import com.facebook.buck.cxx.toolchain.nativelink.NativeLinkable;
 import com.facebook.buck.cxx.toolchain.nativelink.NativeLinkableInput;
-import com.facebook.buck.io.ProjectFilesystem;
+import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.model.BuildTarget;
 import com.facebook.buck.rules.BuildRule;
 import com.facebook.buck.rules.BuildRuleParams;
@@ -95,9 +95,9 @@ public final class FakeCxxLibrary extends NoopBuildRuleWithDeclaredAndExtraDeps
             CxxSymlinkTreeHeaders.builder()
                 .setIncludeType(CxxPreprocessables.IncludeType.LOCAL)
                 .putNameToPathMap(
-                    Paths.get("header.h"), new DefaultBuildTargetSourcePath(publicHeaderTarget))
+                    Paths.get("header.h"), DefaultBuildTargetSourcePath.of(publicHeaderTarget))
                 .setBuildTarget(publicHeaderSymlinkTreeTarget)
-                .setRoot(new DefaultBuildTargetSourcePath(publicHeaderSymlinkTreeTarget))
+                .setRoot(DefaultBuildTargetSourcePath.of(publicHeaderSymlinkTreeTarget))
                 .build())
         .build();
   }
@@ -109,9 +109,9 @@ public final class FakeCxxLibrary extends NoopBuildRuleWithDeclaredAndExtraDeps
             CxxSymlinkTreeHeaders.builder()
                 .setBuildTarget(privateHeaderSymlinkTreeTarget)
                 .setIncludeType(CxxPreprocessables.IncludeType.LOCAL)
-                .setRoot(new DefaultBuildTargetSourcePath(privateHeaderSymlinkTreeTarget))
+                .setRoot(DefaultBuildTargetSourcePath.of(privateHeaderSymlinkTreeTarget))
                 .putNameToPathMap(
-                    Paths.get("header.h"), new DefaultBuildTargetSourcePath(privateHeaderTarget))
+                    Paths.get("header.h"), DefaultBuildTargetSourcePath.of(privateHeaderTarget))
                 .build())
         .build();
   }
