@@ -25,7 +25,7 @@ import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertThat;
 
 import com.facebook.buck.io.ArchiveMemberPath;
-import com.facebook.buck.io.ProjectFilesystem;
+import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.jvm.java.JavaLibraryBuilder;
 import com.facebook.buck.model.BuildTarget;
 import com.facebook.buck.model.BuildTargetFactory;
@@ -39,16 +39,20 @@ import com.facebook.buck.testutil.DummyFileHashCache;
 import com.facebook.buck.testutil.FakeFileHashCache;
 import com.facebook.buck.testutil.FakeProjectFilesystem;
 import com.facebook.buck.util.HumanReadableException;
-import com.facebook.buck.util.cache.DefaultFileHashCache;
 import com.facebook.buck.util.cache.FileHashCache;
 import com.facebook.buck.util.cache.FileHashCacheMode;
-import com.facebook.buck.util.cache.StackedFileHashCache;
+import com.facebook.buck.util.cache.impl.DefaultFileHashCache;
+import com.facebook.buck.util.cache.impl.StackedFileHashCache;
+import com.facebook.buck.util.immutables.BuckStyleImmutable;
+import com.facebook.buck.util.immutables.BuckStyleTuple;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSortedSet;
 import com.google.common.hash.HashCode;
+import com.google.common.util.concurrent.UncheckedExecutionException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import org.immutables.value.Value;
 import org.junit.Test;
 
 public class RuleKeyTest {
@@ -399,13 +403,13 @@ public class RuleKeyTest {
             createBuilder(pathResolver, ruleFinder)
                 .setReflectively(
                     "key",
-                    new ExplicitBuildTargetSourcePath(
+                    ExplicitBuildTargetSourcePath.of(
                         fake1.getBuildTarget(), Paths.get("location")))),
         buildResult(
             createBuilder(pathResolver, ruleFinder)
                 .setReflectively(
                     "key",
-                    new ExplicitBuildTargetSourcePath(
+                    ExplicitBuildTargetSourcePath.of(
                         fake1.getBuildTarget(), Paths.get("location")))));
 
     // Verify that just changing the path of the build rule changes the rule key.
@@ -414,13 +418,13 @@ public class RuleKeyTest {
             createBuilder(pathResolver, ruleFinder)
                 .setReflectively(
                     "key",
-                    new ExplicitBuildTargetSourcePath(
+                    ExplicitBuildTargetSourcePath.of(
                         fake1.getBuildTarget(), Paths.get("location")))),
         buildResult(
             createBuilder(pathResolver, ruleFinder)
                 .setReflectively(
                     "key",
-                    new ExplicitBuildTargetSourcePath(
+                    ExplicitBuildTargetSourcePath.of(
                         fake1.getBuildTarget(), Paths.get("different")))));
 
     // Verify that just changing the build rule rule key changes the calculated rule key.
@@ -429,13 +433,13 @@ public class RuleKeyTest {
             createBuilder(pathResolver, ruleFinder)
                 .setReflectively(
                     "key",
-                    new ExplicitBuildTargetSourcePath(
+                    ExplicitBuildTargetSourcePath.of(
                         fake1.getBuildTarget(), Paths.get("location")))),
         buildResult(
             createBuilder(pathResolver, ruleFinder)
                 .setReflectively(
                     "key",
-                    new ExplicitBuildTargetSourcePath(
+                    ExplicitBuildTargetSourcePath.of(
                         fake2.getBuildTarget(), Paths.get("location")))));
 
     // Verify that just changing the key changes the calculated rule key.
@@ -444,13 +448,13 @@ public class RuleKeyTest {
             createBuilder(pathResolver, ruleFinder)
                 .setReflectively(
                     "key",
-                    new ExplicitBuildTargetSourcePath(
+                    ExplicitBuildTargetSourcePath.of(
                         fake1.getBuildTarget(), Paths.get("location")))),
         buildResult(
             createBuilder(pathResolver, ruleFinder)
                 .setReflectively(
                     "different-key",
-                    new ExplicitBuildTargetSourcePath(
+                    ExplicitBuildTargetSourcePath.of(
                         fake1.getBuildTarget(), Paths.get("location")))));
   }
 
@@ -466,7 +470,7 @@ public class RuleKeyTest {
     resolver.addToIndex(fakeBuildRule);
 
     ExplicitBuildTargetSourcePath archive1 =
-        new ExplicitBuildTargetSourcePath(fakeBuildRule.getBuildTarget(), Paths.get("location"));
+        ExplicitBuildTargetSourcePath.of(fakeBuildRule.getBuildTarget(), Paths.get("location"));
     PathSourcePath archive2 =
         new PathSourcePath(new FakeProjectFilesystem(), Paths.get("otherLocation"));
 
@@ -730,6 +734,178 @@ public class RuleKeyTest {
         ruleKeyFactory.build(ruleWithDeclaredDep), ruleKeyFactory.build(ruleWithBothDeps));
     assertNotEquals(ruleKeyFactory.build(ruleWithExtraDep), ruleKeyFactory.build(ruleWithBothDeps));
   }
+
+  @Test
+  public void immutablesCanAddValueMethodsFromInterfaceImmutablesToRuleKeys() {
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new SingleThreadedBuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = DefaultSourcePathResolver.from(ruleFinder);
+    RuleKey first =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively("value", TestRuleKeyInterfaceImmutable.of("added-1", "ignored-1"))
+            .build(RuleKey::new);
+
+    RuleKey second =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively("value", TestRuleKeyInterfaceImmutable.of("added-1", "ignored-2"))
+            .build(RuleKey::new);
+
+    RuleKey third =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively("value", TestRuleKeyInterfaceImmutable.of("added-2", "ignored-2"))
+            .build(RuleKey::new);
+
+    assertEquals(first, second);
+    assertNotEquals(first, third);
+  }
+
+  @Value.Immutable
+  @BuckStyleTuple
+  interface AbstractTestRuleKeyInterfaceImmutable extends AddsToRuleKey {
+    @AddToRuleKey
+    String getRuleKeyValue();
+
+    String getNonRuleKeyValue();
+  }
+
+  @Test
+  public void immutablesCanAddNonDefaultImmutableValues() {
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new SingleThreadedBuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = DefaultSourcePathResolver.from(ruleFinder);
+    RuleKey first =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively("value", TestRuleKeyImmutableWithDefaults.builder().build())
+            .build(RuleKey::new);
+
+    RuleKey second =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively(
+                "value",
+                TestRuleKeyImmutableWithDefaults.builder().setRuleKeyValue("other").build())
+            .build(RuleKey::new);
+
+    assertNotEquals(first, second);
+  }
+
+  @Value.Immutable
+  @BuckStyleImmutable
+  abstract static class AbstractTestRuleKeyImmutableWithDefaults implements AddsToRuleKey {
+    @AddToRuleKey
+    @Value.Default
+    String getRuleKeyValue() {
+      return "default";
+    }
+  }
+
+  @Test
+  public void immutablesCanAddValueMethodsFromExtendedInterfaceImmutablesToRuleKeys() {
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new SingleThreadedBuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = DefaultSourcePathResolver.from(ruleFinder);
+    RuleKey first =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively("value", TestRuleKeyAbstractImmutable.of("added-1", "ignored-1"))
+            .build(RuleKey::new);
+
+    RuleKey second =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively("value", TestRuleKeyAbstractImmutable.of("added-1", "ignored-2"))
+            .build(RuleKey::new);
+
+    RuleKey third =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively("value", TestRuleKeyAbstractImmutable.of("added-2", "ignored-2"))
+            .build(RuleKey::new);
+
+    assertEquals(first, second);
+    assertNotEquals(first, third);
+  }
+
+  @Value.Immutable
+  @BuckStyleTuple
+  abstract static class AbstractTestRuleKeyAbstractImmutable implements AddsToRuleKey {
+    @AddToRuleKey
+    abstract String getRuleKeyValue();
+
+    abstract String getNonRuleKeyValue();
+  }
+
+  @Test(expected = UncheckedExecutionException.class)
+  public void badUseOfAddValueMethodsToRuleKey() {
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new SingleThreadedBuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = DefaultSourcePathResolver.from(ruleFinder);
+    createBuilder(resolver, ruleFinder)
+        .setReflectively("value", (BadUseOfAddValueMethodsToRuleKey) () -> "")
+        .build(RuleKey::new);
+  }
+
+  interface BadUseOfAddValueMethodsToRuleKey extends AddsToRuleKey {
+    @AddToRuleKey
+    String whatever();
+  }
+
+  interface EmptyInterface {}
+
+  interface ExtendsBadUseAndOther extends EmptyInterface, BadUseOfAddValueMethodsToRuleKey {}
+
+  abstract class EmptyClass {}
+
+  abstract class ExtendsFurtherBadUseAndOther extends EmptyClass
+      implements EmptyInterface, ExtendsBadUseAndOther {}
+
+  @Test(expected = UncheckedExecutionException.class)
+  public void badUseOfAddValueMethodsToRuleKeyInHierarchy() {
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new SingleThreadedBuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = DefaultSourcePathResolver.from(ruleFinder);
+    createBuilder(resolver, ruleFinder)
+        .setReflectively("value", new ClassWithBadThingInHierarchy())
+        .build(RuleKey::new);
+  }
+
+  class ClassWithBadThingInHierarchy extends ExtendsFurtherBadUseAndOther {
+    @Override
+    public String whatever() {
+      return null;
+    }
+  }
+
+  @Test(expected = UncheckedExecutionException.class)
+  public void badUseOfAddValueMethodsToRuleKeyInSomeSuperInterface() {
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new SingleThreadedBuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = DefaultSourcePathResolver.from(ruleFinder);
+    createBuilder(resolver, ruleFinder)
+        .setReflectively(
+            "value",
+            new DerivedFromImplementsBadUseOfAddValueMethodsToRuleKey() {
+              @Override
+              public String whatever() {
+                return null;
+              }
+            })
+        .build(RuleKey::new);
+  }
+
+  abstract class ImplementsBadUseOfAddValueMethodsToRuleKey
+      implements BadUseOfAddValueMethodsToRuleKey {}
+
+  abstract class DerivedFromImplementsBadUseOfAddValueMethodsToRuleKey
+      extends ImplementsBadUseOfAddValueMethodsToRuleKey {}
 
   private static class TestRuleKeyAppendable implements RuleKeyAppendable {
     private final String value;
