@@ -22,7 +22,7 @@ import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 
 import com.facebook.buck.io.ArchiveMemberPath;
-import com.facebook.buck.io.ProjectFilesystem;
+import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.model.BuildTarget;
 import com.facebook.buck.model.BuildTargetFactory;
 import com.facebook.buck.shell.Genrule;
@@ -70,7 +70,7 @@ public class SourcePathResolverTest {
     BuildTarget buildTarget = BuildTargetFactory.newInstance("//:foo");
     BuildRule rule = new PathReferenceRule(buildTarget, new FakeProjectFilesystem(), expectedPath);
     resolver.addToIndex(rule);
-    SourcePath sourcePath = new DefaultBuildTargetSourcePath(rule.getBuildTarget());
+    SourcePath sourcePath = DefaultBuildTargetSourcePath.of(rule.getBuildTarget());
 
     assertEquals(expectedPath, pathResolver.getRelativePath(sourcePath));
   }
@@ -86,7 +86,7 @@ public class SourcePathResolverTest {
     FakeBuildRule rule = new FakeBuildRule("//:foo");
     rule.setOutputFile("notfoo");
     resolver.addToIndex(rule);
-    SourcePath sourcePath = new ExplicitBuildTargetSourcePath(rule.getBuildTarget(), expectedPath);
+    SourcePath sourcePath = ExplicitBuildTargetSourcePath.of(rule.getBuildTarget(), expectedPath);
 
     assertEquals(expectedPath, pathResolver.getRelativePath(sourcePath));
   }
@@ -100,7 +100,7 @@ public class SourcePathResolverTest {
     FakeBuildRule rule = new FakeBuildRule("//:foo");
     rule.setOutputFile("foo");
     resolver.addToIndex(rule);
-    SourcePath sourcePath = new DefaultBuildTargetSourcePath(rule.getBuildTarget());
+    SourcePath sourcePath = DefaultBuildTargetSourcePath.of(rule.getBuildTarget());
 
     assertEquals(Optional.of(rule), ruleFinder.getRule(sourcePath));
   }
@@ -141,7 +141,7 @@ public class SourcePathResolverTest {
     FakeBuildRule rule = new FakeBuildRule("//:foo");
     rule.setOutputFile("foo");
     resolver.addToIndex(rule);
-    SourcePath sourcePath = new DefaultBuildTargetSourcePath(rule.getBuildTarget());
+    SourcePath sourcePath = DefaultBuildTargetSourcePath.of(rule.getBuildTarget());
 
     assertEquals(rule.getOutputFile(), pathResolver.getRelativePath(sourcePath));
   }
@@ -173,9 +173,9 @@ public class SourcePathResolverTest {
         ImmutableList.of(
             new FakeSourcePath("java/com/facebook/Main.java"),
             new FakeSourcePath("java/com/facebook/BuckConfig.java"),
-            new DefaultBuildTargetSourcePath(rule.getBuildTarget()),
-            new ExplicitBuildTargetSourcePath(rule.getBuildTarget(), Paths.get("foo")),
-            new ForwardingBuildTargetSourcePath(rule.getBuildTarget(), new FakeSourcePath("bar")));
+            DefaultBuildTargetSourcePath.of(rule.getBuildTarget()),
+            ExplicitBuildTargetSourcePath.of(rule.getBuildTarget(), Paths.get("foo")),
+            ForwardingBuildTargetSourcePath.of(rule.getBuildTarget(), new FakeSourcePath("bar")));
     Iterable<Path> inputs = pathResolver.filterInputsToCompareToOutput(sourcePaths);
     MoreAsserts.assertIterablesEquals(
         "Iteration order should be preserved: results should not be alpha-sorted.",
@@ -202,10 +202,10 @@ public class SourcePathResolverTest {
     Iterable<? extends SourcePath> sourcePaths =
         ImmutableList.of(
             new FakeSourcePath("java/com/facebook/Main.java"),
-            new DefaultBuildTargetSourcePath(rule.getBuildTarget()),
+            DefaultBuildTargetSourcePath.of(rule.getBuildTarget()),
             new FakeSourcePath("java/com/facebook/BuckConfig.java"),
-            new ExplicitBuildTargetSourcePath(rule2.getBuildTarget(), Paths.get("foo")),
-            new ForwardingBuildTargetSourcePath(rule3.getBuildTarget(), new FakeSourcePath("bar")));
+            ExplicitBuildTargetSourcePath.of(rule2.getBuildTarget(), Paths.get("foo")),
+            ForwardingBuildTargetSourcePath.of(rule3.getBuildTarget(), new FakeSourcePath("bar")));
     Iterable<BuildRule> inputs = ruleFinder.filterBuildRuleInputs(sourcePaths);
     MoreAsserts.assertIterablesEquals(
         "Iteration order should be preserved: results should not be alpha-sorted.",
@@ -247,7 +247,7 @@ public class SourcePathResolverTest {
             .setOut(out)
             .build(resolver);
     DefaultBuildTargetSourcePath buildTargetSourcePath1 =
-        new DefaultBuildTargetSourcePath(genrule.getBuildTarget());
+        DefaultBuildTargetSourcePath.of(genrule.getBuildTarget());
     String actual1 =
         pathResolver.getSourcePathName(
             BuildTargetFactory.newInstance("//:test"), buildTargetSourcePath1);
@@ -260,7 +260,7 @@ public class SourcePathResolverTest {
             fakeBuildTarget, new FakeProjectFilesystem(), TestBuildRuleParams.create());
     resolver.addToIndex(fakeBuildRule);
     DefaultBuildTargetSourcePath buildTargetSourcePath2 =
-        new DefaultBuildTargetSourcePath(fakeBuildRule.getBuildTarget());
+        DefaultBuildTargetSourcePath.of(fakeBuildRule.getBuildTarget());
     String actual2 =
         pathResolver.getSourcePathName(
             BuildTargetFactory.newInstance("//:test"), buildTargetSourcePath2);
@@ -283,7 +283,7 @@ public class SourcePathResolverTest {
             .setOut(out)
             .build(resolver);
     ExplicitBuildTargetSourcePath buildTargetSourcePath1 =
-        new ExplicitBuildTargetSourcePath(genrule.getBuildTarget(), Paths.get("foo"));
+        ExplicitBuildTargetSourcePath.of(genrule.getBuildTarget(), Paths.get("foo"));
     String actual1 =
         pathResolver.getSourcePathName(
             BuildTargetFactory.newInstance("//:test"), buildTargetSourcePath1);
@@ -295,7 +295,7 @@ public class SourcePathResolverTest {
             fakeBuildTarget, new FakeProjectFilesystem(), TestBuildRuleParams.create());
     resolver.addToIndex(fakeBuildRule);
     ExplicitBuildTargetSourcePath buildTargetSourcePath2 =
-        new ExplicitBuildTargetSourcePath(
+        ExplicitBuildTargetSourcePath.of(
             fakeBuildRule.getBuildTarget(),
             fakeBuildRule.getBuildTarget().getBasePath().resolve("foo/bar"));
     String actual2 =
@@ -309,7 +309,7 @@ public class SourcePathResolverTest {
             otherFakeBuildTarget, new FakeProjectFilesystem(), TestBuildRuleParams.create());
     resolver.addToIndex(otherFakeBuildRule);
     ExplicitBuildTargetSourcePath buildTargetSourcePath3 =
-        new ExplicitBuildTargetSourcePath(
+        ExplicitBuildTargetSourcePath.of(
             otherFakeBuildRule.getBuildTarget(), Paths.get("buck-out/gen/package/foo/bar"));
     String actual3 =
         pathResolver.getSourcePathName(
@@ -336,14 +336,14 @@ public class SourcePathResolverTest {
             .setOut(out)
             .build(resolver);
     ForwardingBuildTargetSourcePath buildTargetSourcePath1 =
-        new ForwardingBuildTargetSourcePath(rule.getBuildTarget(), genrule.getSourcePathToOutput());
+        ForwardingBuildTargetSourcePath.of(rule.getBuildTarget(), genrule.getSourcePathToOutput());
     String actual1 =
         pathResolver.getSourcePathName(
             BuildTargetFactory.newInstance("//:test"), buildTargetSourcePath1);
     assertEquals(out, actual1);
 
     ForwardingBuildTargetSourcePath buildTargetSourcePath2 =
-        new ForwardingBuildTargetSourcePath(rule.getBuildTarget(), new FakeSourcePath("foo/bar"));
+        ForwardingBuildTargetSourcePath.of(rule.getBuildTarget(), new FakeSourcePath("foo/bar"));
     String actual2 =
         pathResolver.getSourcePathName(
             BuildTargetFactory.newInstance("//:test"), buildTargetSourcePath2);
@@ -355,7 +355,7 @@ public class SourcePathResolverTest {
             otherFakeBuildTarget, new FakeProjectFilesystem(), TestBuildRuleParams.create());
     resolver.addToIndex(otherFakeBuildRule);
     ForwardingBuildTargetSourcePath buildTargetSourcePath3 =
-        new ForwardingBuildTargetSourcePath(
+        ForwardingBuildTargetSourcePath.of(
             otherFakeBuildRule.getBuildTarget(), buildTargetSourcePath2);
     String actual3 =
         pathResolver.getSourcePathName(
@@ -420,7 +420,7 @@ public class SourcePathResolverTest {
     assertThat(
         pathResolver.getSourcePathName(
             rule.getBuildTarget(),
-            new ExplicitBuildTargetSourcePath(
+            ExplicitBuildTargetSourcePath.of(
                 rule.getBuildTarget(),
                 filesystem.getBuckPaths().getGenDir().resolve("foo").resolve("something.cpp"))),
         Matchers.equalTo("something.cpp"));
@@ -436,11 +436,11 @@ public class SourcePathResolverTest {
         DefaultSourcePathResolver.from(new SourcePathRuleFinder(resolver));
     BuildRule rule = resolver.addToIndex(new FakeBuildRule("//foo:bar"));
     SourcePath sourcePath1 =
-        new ExplicitBuildTargetSourcePath(
+        ExplicitBuildTargetSourcePath.of(
             rule.getBuildTarget(),
             filesystem.getBuckPaths().getGenDir().resolve("foo").resolve("name1"));
     SourcePath sourcePath2 =
-        new ExplicitBuildTargetSourcePath(
+        ExplicitBuildTargetSourcePath.of(
             rule.getBuildTarget(),
             filesystem.getBuckPaths().getGenDir().resolve("foo").resolve("name2"));
     pathResolver.getSourcePathNames(
@@ -473,7 +473,7 @@ public class SourcePathResolverTest {
     BuildRule rule = resolver.addToIndex(new FakeBuildRule("//foo:bar"));
     Path archivePath = filesystem.getBuckPaths().getGenDir().resolve("foo.jar");
     SourcePath archiveSourcePath =
-        new ExplicitBuildTargetSourcePath(rule.getBuildTarget(), archivePath);
+        ExplicitBuildTargetSourcePath.of(rule.getBuildTarget(), archivePath);
     Path memberPath = Paths.get("foo.class");
 
     ArchiveMemberSourcePath path = ArchiveMemberSourcePath.of(archiveSourcePath, memberPath);
@@ -498,7 +498,7 @@ public class SourcePathResolverTest {
     Path archivePath = filesystem.getBuckPaths().getGenDir().resolve("foo.jar");
     Path archiveAbsolutePath = filesystem.resolve(archivePath);
     SourcePath archiveSourcePath =
-        new ExplicitBuildTargetSourcePath(rule.getBuildTarget(), archivePath);
+        ExplicitBuildTargetSourcePath.of(rule.getBuildTarget(), archivePath);
     Path memberPath = Paths.get("foo.class");
 
     ArchiveMemberSourcePath path = ArchiveMemberSourcePath.of(archiveSourcePath, memberPath);
@@ -524,7 +524,7 @@ public class SourcePathResolverTest {
 
     assertThat(
         pathResolver.getPathSourcePath(
-            new DefaultBuildTargetSourcePath(BuildTargetFactory.newInstance("//:rule"))),
+            DefaultBuildTargetSourcePath.of(BuildTargetFactory.newInstance("//:rule"))),
         Matchers.equalTo(Optional.empty()));
 
     assertThat(
@@ -534,7 +534,7 @@ public class SourcePathResolverTest {
     assertThat(
         pathResolver.getPathSourcePath(
             ArchiveMemberSourcePath.of(
-                new DefaultBuildTargetSourcePath(BuildTargetFactory.newInstance("//:rule")),
+                DefaultBuildTargetSourcePath.of(BuildTargetFactory.newInstance("//:rule")),
                 filesystem.getPath("something"))),
         Matchers.equalTo(Optional.empty()));
   }
@@ -562,7 +562,7 @@ public class SourcePathResolverTest {
 
     @Override
     public SourcePath getSourcePathToOutput() {
-      return new ExplicitBuildTargetSourcePath(getBuildTarget(), source);
+      return ExplicitBuildTargetSourcePath.of(getBuildTarget(), source);
     }
   }
 }
